cards de burguers añadidas al menú

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -64,7 +64,7 @@
         <div class="container altura burguers">
             <div class="row h-100">
                 <div class="col-12 col-md-6 col-lg-4 bg-primary bsingular">
-                    <div class="card" style="width: 25rem;">
+                    <div class="card" style="width: 18rem;">
                         <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg" class="card-img-top"
                             alt="Singular burguer">
                         <div class="card-body">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
-                    <div class="card" style="width: 25rem;">
+                    <div class="card" style="width: 18rem;">
                         <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg" class="card-img-top"
                             alt="Jhony drama burguer">
                         <div class="card-body">
@@ -85,34 +85,80 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-warning"><div class="card" style="width: 25rem;">
-                    <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg" class="card-img-top"
-                        alt="Satisfaction">
-                    <div class="card-body">
-                        <h5 class="card-title">JHONY DRAMA</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
+                <div class="col-12 col-md-6 col-lg-4 bg-warning">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg" class="card-img-top"
+                            alt="Satisfaction">
+                        <div class="card-body">
+                            <h5 class="card-title">SATISFACTION</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 bg-warning">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">ANIMAL STYLE</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">STIFLER</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 bg-warning">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">LOSER</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row h-100">
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">
-                    <div class="card" style="width: 25rem;">
-                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top"
-                            alt="Jhony drama burguer">
+                <div class="col-12 col-md-6 col-lg-4 bg-danger">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">JHONY DRAMA</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">CHEESEBURGUER</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
                         </div>
-                        
+                    </div>
                 </div>
-               >
-            </div>
-            <div class="row h-100">
-                <div class="col-12 col-md-6 col-lg-4 bg-danger">A</div>
-                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">B</div>
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">C</div>
+                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">FINCH</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 bg-warning">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/burguers/showton.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SHOWTON</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
