--- a/pages/carta.html
+++ b/pages/carta.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div id="navbar-a">
-            <div class="container ">
+            <div class="container 100-vh p-0">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">Navbar</a>
@@ -35,7 +35,7 @@
                 </nav>
             </div>
             <div id="navbar-a">
-                <div class="container ">
+                <div class="container p-0">
                     <nav class="navbar navbar-expand-lg bg-warning">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="#">Navbar</a>
@@ -51,116 +51,120 @@
                                     <a class="nav-link" href="#">Sides</a>
                                     <a class="nav-link" href="#">kids</a>
                                     <a class="nav-link" href="#">Sweets</a>
-                                    <a class="nav-link" href="#">Drink</a>
+                                    <a class="nav-link" href="#">Drinks</a>
                                 </div>
                             </div>
                         </div>
                     </nav>
                 </div>
             </div>
-
     </nav>
     <main>
-        <div class="container altura burguers">
-            <div class="row h-100">
-                <div class="col-12 col-md-6 col-lg-4 bg-primary bsingular">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg" class="card-img-top"
-                            alt="Singular burguer">
+        <div class="container">            
+            <div class="row vh-100 p-4">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg" 
+                            class="card-img-top card-burguer rounded-0" style="height: 20rem;"alt="Singular burguer">
                         <div class="card-body">
-                            <h5 class="card-title">SINGULAR</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">SINGULAR <span class="price p-2"> 11,5€</span></h5>
+                            <p class="card-text">SEGUNDA MEJOR BURGER DEL MUNDO 2023.Vaca rubia gallega, cheddar, BBQ de mamá, bacon, cebolla
+                                caramelizada y crema camembert.
+                                 </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg" class="card-img-top"
-                            alt="Jhony drama burguer">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg"class="card-img-top card-burguer rounded-0"
+                         style="height: 20rem;"alt="Jhony drama burguer">
                         <div class="card-body">
-                            <h5 class="card-title">JHONY DRAMA</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">JHONY DRAMA<span class="price p-2"> 10,5€</span></h5>
+                            <p class="card-text">Vaca rubia gallega, cheddar, iceberg, cebolla, relish, pickles y Hundred secret mayo.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg" class="card-img-top"
-                            alt="Satisfaction">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                            style="height: 20rem;" alt="Satisfaction burguer">
                         <div class="card-body">
-                            <h5 class="card-title">SATISFACTION</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">SATISFACTION <span class="price p-2"> 12,5€</span></h5>
+                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, doble bacon y smokey mayo.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top" alt="...">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top card-burguer rounded-0"
+                        style="height: 20rem;" alt="Animal style burguer" >
                         <div class="card-body">
-                            <h5 class="card-title">ANIMAL STYLE</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">ANIMAL STYLE <span class="price p-2"> 11,5€</span></h5>
+                            <p class="card-text">Vaca rubia gallega, cheddar madurado, pickles, cebollita rosa encurtida y nuestro pulled pork ahumado
+                                al estilo de Central Texas y bañado en BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                            style="height: 20rem;" alt="STIFLER">
                         <div class="card-body">
-                            <h5 class="card-title">STIFLER</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">STIFLER <span class="price p-2"> 11,5€</span></h5>
+                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, bacon ahumado en dos texturas (fat y thin), pickles
+                                caseros y BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                            style="height: 20rem;" alt="Loser burguer">
                         <div class="card-body">
-                            <h5 class="card-title">LOSER</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">LOSER <span class="price p-2"> 9,5€</span></h5>
+                            <p class="card-text">Vaca rubia gallega, cheddar, cebolla caramelizada y salsa coreana gochujang ligeramente picante.</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row h-100">
-                <div class="col-12 col-md-6 col-lg-4 bg-danger">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                            style="height: 20rem;" alt="cheeseburger">
                         <div class="card-body">
-                            <h5 class="card-title">CHEESEBURGUER</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">CHEESEBURGUER <span class="price p-2"> 9,5€</span></h5>
+                            <p class="card-text">Vaca rubia gallega, cheddar ahumado, salsa secret y crema cambebert.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-danger-subtle">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top" alt="...">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                            style="height: 20rem;" alt="finch burguer">
                         <div class="card-body">
-                            <h5 class="card-title">FINCH</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">FINCH <span class="price p-2"> 14,5€</span></h5>
+                            <p class="card-text">MEJOR BURGER DE ESPAÑA 2021 Chuleta de vaca rubia gallega, cheddar ahumado, cecina de wagyu,
+                                mantequilla ahumada, salsa de yema de huevo.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-warning">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../img/burguers/showton.jpg" class="card-img-top" alt="...">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/burguers/showton.jpg" class="card-img-top card-burguer rounded-0" 
+                            style="height: 20rem;"alt="Showdown burguer">
                         <div class="card-body">
-                            <h5 class="card-title">SHOWTON</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <h5 class="card-title">SHOWDOWN <span class="price p-2"> 13,5€</span></h5>
+                            <p class="card-text">MEJOR BURGUER DE VALENCIA 2021 Vaca rubia gallega,cheddar,thick bacon, salted caramel peanut butter y BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="contaainer">
+            
+        </div>
+
 
     </main>
     <footer>
