Incluido side orders

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -60,110 +60,179 @@
             </div>
     </nav>
     <main>
-        <div class="container">            
-            <div class="row vh-100 p-4">
+        <div class="container container-burguer">
+            <div class="row  p-4">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg" 
-                            class="card-img-top card-burguer rounded-0" style="height: 20rem;"alt="Singular burguer">
+                        <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Singular burguer">
                         <div class="card-body">
                             <h5 class="card-title">SINGULAR <span class="price p-2"> 11,5€</span></h5>
-                            <p class="card-text">SEGUNDA MEJOR BURGER DEL MUNDO 2023.Vaca rubia gallega, cheddar, BBQ de mamá, bacon, cebolla
+                            <p class="card-text">SEGUNDA MEJOR BURGER DEL MUNDO 2023.Vaca rubia gallega, cheddar, BBQ de
+                                mamá, bacon, cebolla
                                 caramelizada y crema camembert.
-                                 </p>
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg"class="card-img-top card-burguer rounded-0"
-                         style="height: 20rem;"alt="Jhony drama burguer">
+                        <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Jhony drama burguer">
                         <div class="card-body">
                             <h5 class="card-title">JHONY DRAMA<span class="price p-2"> 10,5€</span></h5>
-                            <p class="card-text">Vaca rubia gallega, cheddar, iceberg, cebolla, relish, pickles y Hundred secret mayo.</p>
+                            <p class="card-text">Vaca rubia gallega, cheddar, iceberg, cebolla, relish, pickles y
+                                Hundred secret mayo.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
-                            style="height: 20rem;" alt="Satisfaction burguer">
+                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burguer">
                         <div class="card-body">
                             <h5 class="card-title">SATISFACTION <span class="price p-2"> 12,5€</span></h5>
-                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, doble bacon y smokey mayo.</p>
+                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, doble bacon y smokey mayo.
+                            </p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top card-burguer rounded-0"
-                        style="height: 20rem;" alt="Animal style burguer" >
+                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Animal style burguer">
                         <div class="card-body">
                             <h5 class="card-title">ANIMAL STYLE <span class="price p-2"> 11,5€</span></h5>
-                            <p class="card-text">Vaca rubia gallega, cheddar madurado, pickles, cebollita rosa encurtida y nuestro pulled pork ahumado
+                            <p class="card-text">Vaca rubia gallega, cheddar madurado, pickles, cebollita rosa encurtida
+                                y nuestro pulled pork ahumado
                                 al estilo de Central Texas y bañado en BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="STIFLER">
                         <div class="card-body">
                             <h5 class="card-title">STIFLER <span class="price p-2"> 11,5€</span></h5>
-                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, bacon ahumado en dos texturas (fat y thin), pickles
+                            <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, bacon ahumado en dos
+                                texturas (fat y thin), pickles
                                 caseros y BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Loser burguer">
                         <div class="card-body">
                             <h5 class="card-title">LOSER <span class="price p-2"> 9,5€</span></h5>
-                            <p class="card-text">Vaca rubia gallega, cheddar, cebolla caramelizada y salsa coreana gochujang ligeramente picante.</p>
+                            <p class="card-text">Vaca rubia gallega, cheddar, cebolla caramelizada y salsa coreana
+                                gochujang ligeramente picante.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
-                            style="height: 20rem;" alt="cheeseburger">
+                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="cheeseburger">
                         <div class="card-body">
                             <h5 class="card-title">CHEESEBURGUER <span class="price p-2"> 9,5€</span></h5>
-                            <p class="card-text">Vaca rubia gallega, cheddar ahumado, salsa secret y crema cambebert.</p>
+                            <p class="card-text">Vaca rubia gallega, cheddar ahumado, salsa secret y crema cambebert.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top card-burguer rounded-0"
+                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="finch burguer">
                         <div class="card-body">
                             <h5 class="card-title">FINCH <span class="price p-2"> 14,5€</span></h5>
-                            <p class="card-text">MEJOR BURGER DE ESPAÑA 2021 Chuleta de vaca rubia gallega, cheddar ahumado, cecina de wagyu,
+                            <p class="card-text">MEJOR BURGER DE ESPAÑA 2021 Chuleta de vaca rubia gallega, cheddar
+                                ahumado, cecina de wagyu,
                                 mantequilla ahumada, salsa de yema de huevo.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/showton.jpg" class="card-img-top card-burguer rounded-0" 
-                            style="height: 20rem;"alt="Showdown burguer">
+                        <img src="../img/burguers/showton.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Showdown burguer">
                         <div class="card-body">
                             <h5 class="card-title">SHOWDOWN <span class="price p-2"> 13,5€</span></h5>
-                            <p class="card-text">MEJOR BURGUER DE VALENCIA 2021 Vaca rubia gallega,cheddar,thick bacon, salted caramel peanut butter y BBQ de mamá.</p>
+                            <p class="card-text">MEJOR BURGUER DE VALENCIA 2021 Vaca rubia gallega,cheddar,thick bacon,
+                                salted caramel peanut butter y BBQ de mamá.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="contaainer">
-            
+
+        <div class="container container-title d-flex justify-content-center border">
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <h1>SIDE ORDERS</h1>
+            </div>
         </div>
+
+        <div class="container container-sides">
+            <div class="row  p-4">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sides/fries.jpg..jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Patatas fritas">
+                        <div class="card-body">
+                            <h5 class="card-title">PATATAS FRITAS <span class="price p-2"> 3€</span></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sides/sweet.jpg.png" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Sweet potatoes">
+                        <div class="card-body">
+                            <h5 class="card-title">SWEET POTATOES<span class="price p-2"> 4,5€</span></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sides/bacon_cheese.jpg.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Satisfaction burguer">
+                        <div class="card-body">
+                            <h5 class="card-title">SATISFACTION <span class="price p-2"> 6,5€</span></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container container-title d-flex justify-content-center border">
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <h1>KIDS</h1>
+            </div>
+        </div>
+        <div class="container container-sides">
+            <div class="row  p-4">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sides/fries.jpg..jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Patatas fritas">
+                        <div class="card-body">
+                            <h5 class="card-title">PATATAS FRITAS <span class="price p-2"> 3€</span></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sides/sweet.jpg.png" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Sweet potatoes">
+                        <div class="card-body">
+                            <h5 class="card-title">SWEET POTATOES<span class="price p-2"> 4,5€</span></h5>
+                        </div>
+                    </div>
+                </div>
 
 
     </main>
