incluido menu kids

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -200,9 +200,9 @@
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sides/bacon_cheese.jpg.jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Satisfaction burguer">
+                            style="height: 20rem;" alt="Bacon cheese fries">
                         <div class="card-body">
-                            <h5 class="card-title">SATISFACTION <span class="price p-2"> 6,5€</span></h5>
+                            <h5 class="card-title">BACON CHEESE FRIES <span class="price p-2"> 6,5€</span></h5>
                         </div>
                     </div>
                 </div>
@@ -217,19 +217,21 @@
             <div class="row  p-4">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/sides/fries.jpg..jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Patatas fritas">
+                        <img src="../img/kids/kids_burger.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Menu infantil">
                         <div class="card-body">
-                            <h5 class="card-title">PATATAS FRITAS <span class="price p-2"> 3€</span></h5>
+                            <h5 class="card-title">KIDS BURGUER MENU <span class="price p-2"> 9€</span></h5>
+                            <p class="card-text">Cheeseburguer, ketchup y patatas fritas.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/sides/sweet.jpg.png" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Sweet potatoes">
+                        <img src="../img/kids/kids_nuggets.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Menu infantil nuggets">
                         <div class="card-body">
-                            <h5 class="card-title">SWEET POTATOES<span class="price p-2"> 4,5€</span></h5>
+                            <h5 class="card-title">KIDS NUGGETS MENU <span class="price p-2"> 7,5€</span></h5>
+                            <p class="card-text">Cornflake chicken nuggets y patatas fritas.</p>
                         </div>
                     </div>
                 </div>
