incluido sweets en carta

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -213,7 +213,7 @@
                 <h1>KIDS</h1>
             </div>
         </div>
-        <div class="container container-sides">
+        <div class="container container-kids">
             <div class="row  p-4">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
@@ -235,7 +235,63 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
+
+        <div class="container container-title d-flex justify-content-center border">
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <h1>SWEETS</h1>
+            </div>
+        </div>
+        <div class="container container-sweets">
+            <div class="row  p-4">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sweets/sammy-loves.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Sammy chocolate">
+                        <div class="card-body">
+                            <h5 class="card-title">SAMMY CHOCOLATE <span class="price p-2"> 6€</span></h5>
+                            <p class="card-text">Brownie, ganache de chocolate y crema de cacahuete.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sweets/cheesecake-lotus.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Cheesecake Lotus">
+                        <div class="card-body">
+                            <h5 class="card-title">CHEESE CAKE LOTUS<span class="price p-2"> 5,8€</span></h5>
+                            <p class="card-text">Cheesecake con base de galleta lotus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="card border-3 border-white rounded-0" style="width: 20rem;">
+                        <img src="../img/sweets/tarta_de_queso_O3OVEWd.png.720x720_q90.png"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burguer">
+                        <div class="card-body">
+                            <h5 class="card-title">CHEESCAKE NY<span class="price p-2"> 5,8€</span></h5>
+                            <p class="card-text">Cheesecake clásica. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container container-title d-flex justify-content-center border">
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <h1>DRINKS</h1>
+            </div>
+        </div>
+        <div class="container container-drinks">
+            <div class="row  p-4">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    .drinks-left {
+                        
+                    }
+        </div>
 
     </main>
     <footer>
