--- a/index.html
+++ b/index.html
@@ -7,17 +7,53 @@
     <title>Burguer Queen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.ccs">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 
 <body>
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 bg-primary">h</div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 bg-warning">h</div>
-            </div>
+        <nav>
+            <div id="navbar-a">
+                <div class="container 100-vh p-0">
+                    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">Navbar</a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link" href="#">Carta</a>
+                                    <a class="nav-link" href="#">Reservas</a>
+                                    <a class="nav-link" href="#">Contacto</a>
+                                    <a class="nav-link" href="#"> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+        </nav>
+        <main>
+            <div class="container container-burguer-home">
+                <div class="row  p-5 justify-content-end">
+                    <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-start p-5">
+                        <div class="card border-3 border-white rounded-0" style="width: 40rem;">
+                            <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
+                                class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burguer">
+                        </div>
+
+                        <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-end p-0>
+                                   
+                            <h2 class=" card-text">HUNDRED EN CASA</h2>
+                            <button type="button" class="btn btn-dark">PIDE AHORA</button>
+                        </div>
+                    </div>
+                </div>
+        </main>
 
 
         </div>
