--- a/pages/carta.html
+++ b/pages/carta.html
@@ -14,7 +14,7 @@
     <nav>
         <div id="navbar-a">
             <div class="container 100-vh p-0">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary ">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">Navbar</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,24 +34,24 @@
                     </div>
                 </nav>
             </div>
-            <div id="navbar-a">
+            <div id="navbar-b">
                 <div class="container p-0">
-                    <nav class="navbar navbar-expand-lg bg-warning">
+                    <nav class="navbar navbar-expand-lg bg-body-tertiary">
                         <div class="container-fluid">
-                            <a class="navbar-brand" href="#">Navbar</a>
+                            <!-- <a class="navbar-brand" href="#">Navbar</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                                 aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                                <div class="navbar-nav">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                    <a class="nav-link" href="#">Burguers</a>
-                                    <a class="nav-link" href="#">Sides</a>
-                                    <a class="nav-link" href="#">kids</a>
-                                    <a class="nav-link" href="#">Sweets</a>
-                                    <a class="nav-link" href="#">Drinks</a>
+                            </button> -->
+                            <div class="collapse navbar-collapse nav-carta" id="navbarNavAltMarkup">
+                                <div class="navbar-nav nav-carta" >
+                                    <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
+                                    <a class="nav-link" href="#">🍔Burguers</a>
+                                    <a class="nav-link" href="#side">🍟Sides</a>
+                                    <a class="nav-link" href="#kids">🧸kids</a>
+                                    <a class="nav-link" href="#seets">🍰Sweets</a>
+                                    <a class="nav-link" href="#drinks">🥤Drinks</a>
                                 </div>
                             </div>
                         </div>
@@ -61,8 +61,8 @@
     </nav>
     <main>
         <div class="container container-burguer">
-            <div class="row  p-4">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="row  p-5">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Singular burguer">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Jhony drama burguer">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burguer">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/animalstyle.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Animal style burguer">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="STIFLER">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Loser burguer">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="cheeseburger">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="finch burguer">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burguers/showton.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Showdown burguer">
@@ -173,12 +173,12 @@
 
         <div class="container container-title d-flex justify-content-center border">
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-                <h1>SIDE ORDERS</h1>
+                <h1 id="side">SIDE ORDERS</h1>
             </div>
         </div>
 
         <div class="container container-sides">
-            <div class="row  p-4">
+            <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sides/fries.jpg..jpg" class="card-img-top card-dish rounded-0"
@@ -210,11 +210,11 @@
         </div>
         <div class="container container-title d-flex justify-content-center border">
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-                <h1>KIDS</h1>
+                <h1 id="kids">KIDS</h1>
             </div>
         </div>
         <div class="container container-kids">
-            <div class="row  p-4">
+            <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/kids/kids_burger.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
@@ -241,11 +241,11 @@
 
         <div class="container container-title d-flex justify-content-center border">
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-                <h1>SWEETS</h1>
+                <h1 id="sweets">SWEETS</h1>
             </div>
         </div>
         <div class="container container-sweets">
-            <div class="row  p-4">
+            <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sweets/sammy-loves.jpg.720x720_q90.jpg"
@@ -282,15 +282,37 @@
 
         <div class="container container-title d-flex justify-content-center border">
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-                <h1>DRINKS</h1>
+                <h1 id="drinks">DRINKS</h1>
             </div>
         </div>
         <div class="container container-drinks">
-            <div class="row  p-4">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-                    .drinks-left {
-                        
-                    }
+            <div class="row  p-5">
+                <div class="col-12 col-md-6 col-lg-4 d-flex >
+                    <div class=" drinks-menu">
+                    <div class="drink-left">
+                        <h5>COCA-COLA FREESTYLE</h5>
+                        <P>A rellenar ilimitadamente con tus sabores y combinaciones favortias, Coca-Cola, Fanta y más
+                        </P>
+                        <h5>AGUA MINERAL EVIAN </h5>
+                        <P>Botella de 500 ml</P>
+                        <h5>NESTE LIMÓN</h5>
+                        <P>Botella de 500 ml</P>
+                        <h5>AQUARIUS</h5>
+                        <P>Botella de 500 ml</P>
+                    </div>
+                    <div class="drink-right">
+                        <h5>CORONA</h5>
+                        <P>Botella 0,35cl</P>
+                        <h5>BUDWEISER</h5>
+                        <P>Botella 0,35cl</P>
+                        <h5>ALL DAY IPA</h5>
+                        <P>Botella 0,35cl</P>
+                        <h5>ESTRELLA GALICIA 0,0</h5>
+                        <P>Botella de 0,35cl</P>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
     </main>
