Inicio página de contacto

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -50,7 +50,7 @@
                                     <a class="nav-link" href="#">🍔Burguers</a>
                                     <a class="nav-link" href="#side">🍟Sides</a>
                                     <a class="nav-link" href="#kids">🧸kids</a>
-                                    <a class="nav-link" href="#seets">🍰Sweets</a>
+                                    <a class="nav-link" href="#sweets">🍰Sweets</a>
                                     <a class="nav-link" href="#drinks">🥤Drinks</a>
                                 </div>
                             </div>
