--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
-    <h1>Contacto</h1>
-    
+    <main>
+        <nav>
+            <div id="navbar-a">
+                <div class="container 100-vh p-0">
+                    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">Navbar</a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link" href="#">Carta</a>
+                                    <a class="nav-link" href="#">Reservas</a>
+                                    <a class="nav-link" href="#">Contacto</a>
+                                    <a class="nav-link" href="#"> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+        </nav>
+        <main>
+            <div class="container container-contacto">
+                <div class="row  p-5 justify-content-end">
+                    <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center p-5">
+                        <div class="card border-3 border-white rounded-0" style="width: 40rem;">
+                            <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
+                                class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burguer">
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+
 </body>
+
 </html>
